# ethzasl_msf

msf_core/: CMakeLists.txt
msf_updates/: CMakeLists.txt  position_attitude_sensor_fix .yaml
msf_updates/cfg/: PositionAttitudeSensor.cfg
msf_updates/include/msf_updates/attitude_sensor_handler/: attitude_measurement.h  attitude_sensorhandler.h
msf_updates/include/msf_updates/attitude_sensor_handler/implementation/: attitude_sensorhandler.hpp
msf_updates/include/msf_updates/attitude_sensor_handler/implementations/: attitude_sensorhandler.hpp
msf_updates/launch/: position_attitude_sensor.launch  position_sensor.launch
msf_updates/src/position_attitude_msf/: .main.cpp.swp  CMakeLists.txt  main.cpp  msf_statedef.hpp  position_attitude_sensormanager.h
sensor_fusion_comm/: CMakeLists.txt  package.xml
sensor_fusion_comm/msg/: AttitudeStamped.msg  AttitudeWithCovarianceStamped.msg
