<package>
  <name>sensor_fusion_comm</name>
  <version>1.0.2</version>
  <description>This package contains messages, services and action definitions needed by ethzasl_sensor_fusion and nodes communicating with it. A modified version with magnetometer as attitude sensor.</description>
  <maintainer email="liuch13@seas.upenn.edu">Chenhao Liu</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/sensor_fusion_comm</url>
  <url type="bugtracker">https://github.com/ChenhaoLiu-SeasPenn/ethzasl_msf/issues</url>

  <author>Stephan Weiss</author>
  <author>Markus Achtelik</author>
  <author>Chenhao Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
